--- a/res/values-fr/text.xml
+++ b/res/values-fr/text.xml
@@ -14,14 +14,14 @@
     <string name="TVvnc">Serveur VNC (port 5901)</string>
     <string name="TVbootani">Utiliser une animation de démarrage plus légère</string>
     <string name="TVservicemode">Ouvrir le mode Samsung service</string>
-	<string name="TVkitchen">Ouvrir GAOSP Kitchen</string>
-	<string name="TVmemorythresholds">Memory Thresholds</string>
-	<string name="TVforegroundapp">Foreground app</string>
-	<string name="TVvisibleapp">Visible app</string>
-	<string name="TVsecondaryapp">Secondary Server</string>
-	<string name="TVhiddenapp">Hidden app</string>
-	<string name="TVcontentapp">Content provider</string>
-	<string name="TVemptyapp">Empty app</string>
+    <string name="TVkitchen">Ouvrir GAOSP Kitchen</string>
+    <string name="TVmemorythresholds">Seuils mémoire</string>
+    <string name="TVvisibleapp">Application visible</string>
+    <string name="TVforegroundapp">Application principale</string>
+    <string name="TVsecondaryapp">Service secondaire</string> 
+    <string name="TVhiddenapp">Application cachée</string>
+    <string name="TVcontentapp">Fournisseur de données</string>
+    <string name="TVemptyapp">Application vide</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
