--- a/res/values-ro/description.xml
+++ b/res/values-ro/description.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="compcache">Compresarea paginilor (compcache) si pastrarea lor in RAM-ul virtual mareste capcitatea sa. Aceasta permite aplicatiilor sa se deschida in memoria alocata. Dar foloseste mai mult procesorul. Aceasta mai activeaza si Swap.</string>
+	<string name="compcache">Compresarea paginilor (compcache) si pastrarea lor in RAM-ul virtual mareste capcitatea sa. Aceasta permite aplicatiilor sa se deschida in memoria alocata. Dar foloseste mai mult procesorul. Aceasta mai activeaza si Swap.</string>
 	<string name="compcachedisk">Dimensiune compcache</string>
 	<string name="swap">Android foloseşte spatiul de swap ca "extra" memorie pentru aplicatii care nu sunt folosite in mod activ de punerea in aplicare, dar au fost modificate (scrise). Dimensiunea spatiu swap plus RAM reprezinta cantitatea totala de memorie virtuala a sistem-ului. Creaza paritie swap in recovery prima data. Ai nevoie de un card SD extern (recomandat Clasa 6 ).</string>
 	<string name="overclock1">Overclock la 614 MHz.</string>
@@ -14,11 +14,11 @@
 	<string name="bootani">Foloseste o animatie de boot mai mica pentru a reduce timpul de incarcare a sistemului.</string>
 	<string name="servicemode">Doar pentru experti! Puteti aplica Audio Hack aici.</string>
 	<string name="kitchen">Creazati propriul pachet de aplicatii  Google.</string>
-	<string name="memorythresholds">These are the thresholds from which the device will kill some processes, to free memory (below these thresholds, internal task killer will kill these apps). Make a Nandroid Backup before!</string>
-	<string name="foregroundapp">This is the application currently on the screen, and running. Do not change this value unless you have much knowledge about that!</string>
-	<string name="visibleapp">This is an application that is open, and running in the background because it is still doing something. Do not change this value unless you have much knowledge about that!</string>
-	<string name="secondaryapp">This is a process (a service that an application needs) that is alive and ready in case it is needed to do something. Do not change this value unless you have much knowledge about that!</string>
-	<string name="hiddenapp">This again is a process, that sits idle (but still alive) in case it is needed by an app that is alive and running. Be careful with this setting!</string>
-	<string name="contentapp">They are applications that provide data (content) to the system. So are things like the Android Market, or Google Sync. If they are alive, they can refresh and provide the content they are supposed to at the set interval. If you kill them, they can not of course.</string>
-	<string name="emptyapp">We call these "ghosts." They are applications that you have opened, but are done with them. Android uses a unique style of handling memory management. When an activity is ended, instead of killing it off Android keeps the application in memory so that opening them again is a faster process. Theses "ghost" applications use no battery or CPU time, they just fill RAM that would be otherwise empty. When this memory is needed by a different application or process, the RAM is flushed and made available for the new application.</string>	
+	<string name="memorythresholds">Acestea sunt limitele pana la care aparatul va opri  procese pentru a elibera memorie (sub aceste limite, task killer-ul va opri aceste aplicatii). Fa un Nandroid Backup inainte !</string>
+	<string name="foregroundapp">Aceasta este aplicatia care ruleaza momentan. Nu schimba valorile decat daca ai cunostintele necesare!</string>
+	<string name="visibleapp">Aceasta este o aplicatie care este deschisa in background si inca functioneaza pentru ca face ceva. Nu schimba valorile decat daca ai cunostintele necesare!</string>
+	<string name="secondaryapp">Acesta este un proces (un serviciu de care are nevoie o aplicatie) ce este active si gata sa intervina oricand este nevoie. Nu schimba valorile decat daca ai cunostintele necesare!</string>
+	<string name="hiddenapp">Acesta este tot un proces, dar care este inactiv,in cazul in care este nevoie de el, acesta va devein activ. Grija cu aceasta setare!</string>
+	<string name="contentapp">Sunt aplicatii ce aduc informatii sistemului. De exemplu: Android Market sau Google Sync. Daca sunt active, se pot reimprospata si pot aduce datele necesare atunci cand este nevoie. Daca le opresti, desigur ele nu vor mai aduce nicio informatie.</string>
+	<string name="emptyapp">Le numim "ghosts." Sunt aplicatii pe care le-ai deschis dar care au fost inchise. Android foloseste un sistem unic de management al memoriei. Cand o activitate este deschisa, in loc sa o inchida, Android pastreaza aplicatia in memorie in asa fel incat cand sunt deschise a doua oara sa se deschida mult mai repede. Aceste aplicatii de tip "ghost" nu folosesc baterie sau CPU, ele doar “umplu” RAM in loc sa il lase liber. Cand este nevoie de aceasta memorie folosita, RAM-ul este golit si pregatit pentru noua aplicatie.</string>	
 </resources>
