--- a/res/values-tr/text.xml
+++ b/res/values-tr/text.xml
@@ -15,13 +15,13 @@
     <string name="TVbootani">Daha hafif bir açılış animasyonu kullan</string>
     <string name="TVservicemode">Samsung servis modunda aç</string>
 	<string name="TVkitchen">GAOSP Kitchen´ı aç</string>
-	<string name="TVmemorythresholds">Memory Thresholds</string>
-	<string name="TVforegroundapp">Foreground app</string>
-	<string name="TVvisibleapp">Visible app</string>
-	<string name="TVsecondaryapp">Secondary Server</string>
-	<string name="TVhiddenapp">Hidden app</string>
-	<string name="TVcontentapp">Content provider</string>
-	<string name="TVemptyapp">Empty app</string>
+	<string name="TVmemorythresholds">Bellek Eşikleri</string>
+	<string name="TVforegroundapp">Ön Plan Uygulamaları</string>
+	<string name="TVvisibleapp">Görünür Uygulamalar</string>
+	<string name="TVsecondaryapp">İkincil Server</string>
+	<string name="TVhiddenapp">Gizli Uygulamalar</string>
+	<string name="TVcontentapp">İçerik Sağlayıcı</string>
+	<string name="TVemptyapp">Boş Uygulamalar</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
