Simplified memory thresholds (MB). Translations: - Changed values-pt to values-pt-rBR - Added portuguese - Updated Croatian

--- a/res/values-da/text.xml
+++ b/res/values-da/text.xml
@@ -16,12 +16,12 @@
     <string name="TVservicemode">Åben Samsung service tilstand</string>
 	<string name="TVkitchen">Åben GAOSP Køkken</string>
 	<string name="TVmemorythresholds">Memory Thresholds</string>
-	<string name="TVforegroundapp">Foreground app</string>
-	<string name="TVvisibleapp">Visible app</string>
-	<string name="TVsecondaryapp">Secondary Server</string>
-	<string name="TVhiddenapp">Hidden app</string>
-	<string name="TVcontentapp">Content provider</string>
-	<string name="TVemptyapp">Empty app</string>
+	<string name="TVforegroundapp">Foreground app (MB)</string>
+	<string name="TVvisibleapp">Visible app (MB)</string>
+	<string name="TVsecondaryapp">Secondary Server (MB)</string>
+	<string name="TVhiddenapp">Hidden app (MB)</string>
+	<string name="TVcontentapp">Content provider (MB)</string>
+	<string name="TVemptyapp">Empty app (MB)</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Øko</string>
 	<string name="CBmix">Mix</string>
