--- a/res/values-ro/text.xml
+++ b/res/values-ro/text.xml
@@ -16,12 +16,12 @@
     <string name="TVservicemode">Deschide mod service Samsung</string>
 	<string name="TVkitchen">Deschide GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Limitele memoriei</string>
-	<string name="TVforegroundapp">Aplicatie din background</string>
-	<string name="TVvisibleapp">Aplicatie vizibila</string>
-	<string name="TVsecondaryapp">Server secundar</string>
-	<string name="TVhiddenapp">Aplicatie ascunsa</string>
-	<string name="TVcontentapp">Provider de date</string>
-	<string name="TVemptyapp">Aplicatie goala</string>
+	<string name="TVforegroundapp">Aplicatie din background (MB)</string>
+	<string name="TVvisibleapp">Aplicatie vizibila (MB)</string>
+	<string name="TVsecondaryapp">Server secundar (MB)</string>
+	<string name="TVhiddenapp">Aplicatie ascunsa (MB)</string>
+	<string name="TVcontentapp">Provider de date (MB)</string>
+	<string name="TVemptyapp">Aplicatie goala (MB)</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
