--- a/res/values-bg/text.xml
+++ b/res/values-bg/text.xml
@@ -15,6 +15,13 @@
     <string name="TVbootani">Използва малка boot анимация</string>
     <string name="TVservicemode">Отвори сервизен режим на Samsung</string>
 	<string name="TVkitchen">Отвори GAOSP Kitchen</string>
+	<string name="TVmemorythresholds">Memory Thresholds</string>
+	<string name="TVforegroundapp">Foreground app (MB)</string>
+	<string name="TVvisibleapp">Visible app (MB)</string>
+	<string name="TVsecondaryapp">Secondary Server (MB)</string>
+	<string name="TVhiddenapp">Hidden app (MB)</string>
+	<string name="TVcontentapp">Content provider (MB)</string>
+	<string name="TVemptyapp">Empty app (MB)</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
