--- a/res/values-fr/text.xml
+++ b/res/values-fr/text.xml
@@ -16,12 +16,12 @@
     <string name="TVservicemode">Ouvrir le mode Samsung service</string>
     <string name="TVkitchen">Ouvrir GAOSP Kitchen</string>
     <string name="TVmemorythresholds">Seuils mémoire</string>
-    <string name="TVvisibleapp">Application visible</string>
-    <string name="TVforegroundapp">Application principale</string>
-    <string name="TVsecondaryapp">Service secondaire</string> 
-    <string name="TVhiddenapp">Application cachée</string>
-    <string name="TVcontentapp">Fournisseur de données</string>
-    <string name="TVemptyapp">Application vide</string>
+    <string name="TVvisibleapp">Application visible (MB)</string>
+    <string name="TVforegroundapp">Application principale (MB)</string>
+    <string name="TVsecondaryapp">Service secondaire (MB)</string> 
+    <string name="TVhiddenapp">Application cachée (MB)</string>
+    <string name="TVcontentapp">Fournisseur de données (MB)</string>
+    <string name="TVemptyapp">Application vide (MB)</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
