--- a/res/values-pl/text.xml
+++ b/res/values-pl/text.xml
@@ -16,12 +16,12 @@
     <string name="TVservicemode">Otwórz tryb serwisowy Samsunga</string>
 	<string name="TVkitchen">Otwórz GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Progi pamięci</string>
-	<string name="TVforegroundapp">Pierwszoplanowa aplikacja</string>
-	<string name="TVvisibleapp">Widoczna aplikacja</string>
-	<string name="TVsecondaryapp">Drugorzędny serwer</string>
-	<string name="TVhiddenapp">Ukryta aplikacja</string>
-	<string name="TVcontentapp">Dostawca treści</string>
-	<string name="TVemptyapp">Pusta aplikacja</string>
+	<string name="TVforegroundapp">Pierwszoplanowa aplikacja (MB)</string>
+	<string name="TVvisibleapp">Widoczna aplikacja (MB)</string>
+	<string name="TVsecondaryapp">Drugorzędny serwer (MB)</string>
+	<string name="TVhiddenapp">Ukryta aplikacja (MB)</string>
+	<string name="TVcontentapp">Dostawca treści (MB)</string>
+	<string name="TVemptyapp">Pusta aplikacja (MB)</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
