--- a/res/values-pt/description.xml
+++ b/res/values-pt/description.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="compcache">Comprimir páginas e deixá-las em memória RAM virtualmente aumenta sua capacidade. Isso permite que mais aplicações caibam em uma dada porção de memória, mas usa tempo adicional de CPU. Isso também ativa a Swap.</string>
+    <string name="compcache">Comprime os segmentos de memória volátil, aumentando a sua capacidade. Desta forma cabem mais aplicações na memória RAM, em troca de um pequeno aumento na utilização dp processador. Também activa o SWAP.</string>
 	<string name="compcachedisk">O tamanho do compcache</string>
-	<string name="swap">Android usa o espaço Swap como memória extra para páginas da memória da aplicação que não estão efetivamente sendo usadas pela aplicação, mas foram modificadas (escritas). O espaço Swap mais o espaço RAM é a quantidade de memória virtual para o sistema. Crie a partição Swap com o Recovery primeiro.</string>
-	<string name="overclock1">Overclock de seu processador para 614 MHz.</string>
-	<string name="overclock2">Overclock de seu processador para 710 MHz. Instável em alguns dispositivos.</string>
-	<string name="sampling">É intervalo de tempo no qual o dispositivo faz sua própria carga. Depois de cada intervalo, o dispositivo aumenta ou diminui a velocidade da cpu em função da carga.</string>
-	<string name="sensors">O quão rápido todos os Sensores irão reagir.</string>
-	<string name="ssh">Permite rodar um shell Linux de seu computador no seu Galaxy.</string>
-	<string name="renice">Renasce/altera as prioridade de um ou mais processos rodando.</string>
-	<string name="provisionned">Você pode usar o seu Galaxy sem um cartão SIM.</string>
-	<string name="vnc">Você pode controlar o seu aparelho através do computador (usando um aplicativo especializado).</string>
-	<string name="bootani">Utilize uma animação de boot simples para diminuir tempo de inicialização.</string>
-	<string name="servicemode">Para usuários expertos! Você pode ativar Audio Hack aqui.</string>
-	<string name="kitchen">Crie seu próprio Google Application Package.</string>
-	<string name="memorythresholds">These are the thresholds from which the device will kill some processes, to free memory (below these thresholds, internal task killer will kill these apps). Make a Nandroid Backup before!</string>
-	<string name="foregroundapp">This is the application currently on the screen, and running. Do not change this value unless you have much knowledge about that!</string>
-	<string name="visibleapp">This is an application that is open, and running in the background because it is still doing something. Do not change this value unless you have much knowledge about that!</string>
-	<string name="secondaryapp">This is a process (a service that an application needs) that is alive and ready in case it is needed to do something. Do not change this value unless you have much knowledge about that!</string>
-	<string name="hiddenapp">This again is a process, that sits idle (but still alive) in case it is needed by an app that is alive and running. Be careful with this setting!</string>
-	<string name="contentapp">They are applications that provide data (content) to the system. So are things like the Android Market, or Google Sync. If they are alive, they can refresh and provide the content they are supposed to at the set interval. If you kill them, they can not of course.</string>
-	<string name="emptyapp">We call these "ghosts." They are applications that you have opened, but are done with them. Android uses a unique style of handling memory management. When an activity is ended, instead of killing it off Android keeps the application in memory so that opening them again is a faster process. Theses "ghost" applications use no battery or CPU time, they just fill RAM that would be otherwise empty. When this memory is needed by a different application or process, the RAM is flushed and made available for the new application.</string>	
+	<string name="swap">O Android usa o espaço swap como memória "extra" para as aplicações que não estão activas, mas cujo estado foi guardado. O espaço swap mais o tamanho da memória RAM equivalem ao total de memória virtual no sistema. É necessário criar uma partição swap no modo Recovery primeiro, e um cartão SD de no mínimo classe 6.</string>
+	<string name="overclock1">Fazer overclock do seu processador para 614 MHz.</string>
+	<string name="overclock2">Fazer overclock do seu processador para 710 MHz. Esta opção é instável em certos dispositivos.</string>
+	<string name="sampling">O intervalo de tempo após o qual o dispositivo altera a velocidade do processador, de acordo com a carga de processamento.</string>
+	<string name="sensors">A velocidade de reacção dos sensores.</string>
+	<string name="ssh">Permite aceder remotamente à linha de comandos no dispositivo.</string>
+	<string name="renice">Altera a prioridade de um ou mais processos em execução.</string>
+	<string name="provisionned">Permite a utilisação do telemóvel sem um cartão SIM.</string>
+	<string name="vnc">Permite o contole do telemóvel a partir do sei computador (através de um cliente VNC).</string>
+	<string name="bootani">Usa uma animação de arranque mais pequena para diminuir o tempo de arranque.</string>
+	<string name="servicemode">Apenas para peritos! Aqui é possível aplicar o Hack para o áudio.</string>
+	<string name="kitchen">Criar um pacote de aplicações da Google personalisado.</string>
+	<string name="memorythresholds">Os limiares de memória a partir dos quais o dispositivo fecha alguns processos para libertar memória. É recomendado fazer um backup com o Nandroid antes de alterar estas definições!</string>
+	<string name="foregroundapp">A aplicação actualmente visível e em execução. Não altere este valor se não estiver certo do que está a fazer!</string>
+	<string name="visibleapp">Uma aplicação que não está visível, mas em execução. Não altere este valor se não estiver certo do que está a fazer!</string>
+	<string name="secondaryapp">Um processo (um serviço a cumprir tarefas para uma aplicação) que se encontra preparado para executar. Não altere este valor se não estiver certo do que está a fazer!</string>
+	<string name="hiddenapp">Um processo que se encontra adormecido à espera de um requerimento de uma aplicação. Não altere este valor se não estiver certo do que está a fazer!</string>
+	<string name="contentapp">Aplicações que fornecem dados para o sistema. Exemplos são o Android Market, e o Google Sync. Estes necessitam de permanecer activos para gerar os conteúdos em intervalos regulares.</string>
+	<string name="emptyapp">Estas são apelidadas de "aplicações fantasma". São aplicações que foram usadas e terminadas. O Android geralmente tenta manter estas aplicações em memória para que abram mais rapidamente caso sejam usadas novamente. As "aplicações fantasma" não requerem qualquer processamento nem consomem energia, apenas usam memória que de outra forma estaria inutilizada. Quando essa memória é necessária para outras aplicações ou processos, a "aplicação fantasma" é terminada para libertar os recursos.</string>	
 </resources>
