--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
-	 xmlns:android="http://schemas.android.com/apk/res/android" 
-     android:scrollbars="vertical" 
-     android:layout_height="fill_parent" 
+	 xmlns:android="http://schemas.android.com/apk/res/android"
+     android:scrollbars="vertical"
+     android:layout_height="fill_parent"
      android:layout_width="fill_parent">
 
 <LinearLayout
@@ -10,47 +10,6 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
-
-<!-- Compcache -->
-<LinearLayout
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content">
-<TextView
-	android:id="@+id/Textcomp"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-    android:text="@string/TVcompcache"
-	android:layout_marginLeft="4dip"
-	android:textSize="16sp"
-	android:textStyle="bold"
-	android:layout_weight="1"
-	android:layout_gravity="center_vertical"
-	android:clickable="true"/>
-<ToggleButton
-	android:id="@+id/comp"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:layout_marginRight="10dip"
-	android:layout_gravity="center_vertical"/>
-<TextView
-	android:id="@+id/Textcompedit"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-    android:text="@string/TVcompcachedisk"
-	android:textSize="16sp"
-	android:textStyle="bold"
-	android:layout_gravity="center_vertical"
-	android:clickable="true"/>
-<EditText
-   	android:id="@+id/disksize"
-   	android:numeric="integer"
-   	android:gravity="right|center_vertical"
-  	android:singleLine="true"
-   	android:layout_width="70dip"
-	android:layout_height="wrap_content"
-	android:layout_marginRight="4dip"
-	android:layout_gravity="center_vertical"/>
-</LinearLayout>
 
 <!-- Swap-->
 <LinearLayout
@@ -61,7 +20,7 @@
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
     android:text="@string/TVswap"
-	android:layout_marginLeft="40dip"
+	android:layout_marginLeft="4dip"
 	android:textSize="16sp"
 	android:textStyle="bold"
 	android:layout_weight="1"
@@ -397,9 +356,10 @@
 <EditText
    	android:id="@+id/memory1"
    	android:numeric="integer"
+   	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="80dip"
+   	android:layout_width="40dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -422,9 +382,10 @@
 <EditText
    	android:id="@+id/memory2"
    	android:numeric="integer"
+   	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="80dip"
+   	android:layout_width="40dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -448,9 +409,10 @@
 <EditText
    	android:id="@+id/memory3"
    	android:numeric="integer"
+   	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="80dip"
+   	android:layout_width="40dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -473,9 +435,10 @@
 <EditText
    	android:id="@+id/memory4"
    	android:numeric="integer"
+   	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="80dip"
+   	android:layout_width="40dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -499,9 +462,10 @@
 <EditText
    	android:id="@+id/memory5"
    	android:numeric="integer"
+   	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="80dip"
+   	android:layout_width="40dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
@@ -524,9 +488,10 @@
 <EditText
    	android:id="@+id/memory6"
    	android:numeric="integer"
+   	android:maxLength="2"
    	android:gravity="right|center_vertical"
   	android:singleLine="true"
-   	android:layout_width="80dip"
+   	android:layout_width="40dip"
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
