--- a/res/values-de/text.xml
+++ b/res/values-de/text.xml
@@ -11,6 +11,7 @@
     <string name="TVprovisionned">Provisioned</string>
     <string name="TVvnc">VNC Server (Port 5901)</string>
     <string name="TVbootani">Kleinere Bootanimation</string>
+    <string name="TVlcddensity">LCD Density</string>
     <string name="TVservicemode">Samsung Service Modus App</string>
     <string name="TVkitchen">GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Speicher Thresholds</string>
