--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -272,10 +272,38 @@
 	android:layout_gravity="center_vertical"/>
 </LinearLayout>
 
-<!-- Service Mode -->
+<!-- LCD Density -->
 <LinearLayout
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content">
+<TextView
+	android:id="@+id/Textlcddensity"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+    android:text="@string/TVlcddensity"
+	android:layout_marginLeft="4dip"
+	android:textSize="16sp"
+	android:textStyle="bold"
+	android:layout_weight="1"
+	android:layout_gravity="center_vertical"
+	android:clickable="true"/>
+<EditText
+   	android:id="@+id/lcddensity"
+   	android:numeric="integer"
+   	android:maxLength="3"
+   	android:gravity="right|center_vertical"
+  	android:singleLine="true"
+   	android:layout_width="50dip"
+	android:layout_height="wrap_content"
+	android:layout_marginRight="4dip"
+	android:layout_gravity="center_vertical"/>
+</LinearLayout>
+
+<!-- Service Mode -->
+<LinearLayout
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:background="#222222">
 <TextView
 	android:id="@+id/Textservice"
 	android:layout_width="wrap_content"
@@ -299,8 +327,7 @@
 <!-- Kitchen -->
 <LinearLayout
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:background="#222222">
+	android:layout_height="wrap_content">
 <TextView
 	android:id="@+id/Textkitchen"
 	android:layout_width="wrap_content"
@@ -331,7 +358,7 @@
 <TextView
 	android:id="@+id/Textmemorythresholds"
 	android:layout_width="fill_parent"
-	android:layout_height="40dip"
+	android:layout_height="50dip"
     android:text="@string/TVmemorythresholds"
 	android:textSize="20sp"
 	android:textStyle="bold"
