--- a/res/values-hr/description.xml
+++ b/res/values-hr/description.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="swap">Android koristi prostor za premještanje dijelova podataka u memoriju kao dodatnu memoriju za stranice od aplikacijske memorije koje se ne koriste aktivno od strane aplikacija ali su izmijenjene (upisano u). Veličina prostora za premještanje dijelova podataka plus veličina radne memorije je sveukupna prividna memorija za sustav. Stvorite particiju za premještanje podataka u memoriju pomoću načina rada za oporavak - Recovery mode. Treba Vam vanjska SD kartica (preporuka - 6 klasa).</string>
+	<string name="swap">Android koristi prostor za premještanje dijelova podataka u memoriju (swap) kao dodatnu memoriju za stranice od aplikacijske memorije koje se aktivno ne koriste od strane aplikacija ali su bile izmijenjene (upisane u). Veličina "swap"-a plus veličina RAM-a je sveukupna prividna memorija za sustav. Stvorite particiju za "swap" particiju pomoću načina rada za oporavak - Recovery mode. Treba Vam vanjska SD kartica (preporuka - 6 klase). Compcache će biti isljučen.</string>
 	<string name="overclock1">Overklokanje (O/C) Vašeg procesora na 614 MHz.</string>
 	<string name="overclock2">Overklokanje (O/C) Vašeg procesora na 710 MHz. Nestabino na nekim uređajima.</string>
-	<string name="sampling">Vremenski razmak u kojem uređaj dobiva svoje opterećenje. Nakon svakog uzorka uređaj povećava ili smanjuje brzinu procesora s obzirom na opterećenje.</string>
-	<string name="sensors">Kako brzo će svi senzori reagirati.</string>
+	<string name="sampling">Vremenski razmak u kojem uređaj dobiva svoje opterećenje. Nakon svakog uzorka, uređaj povećava ili smanjuje brzinu procesora s obzirom na opterećenje.</string>
+	<string name="sensors">Kako brzo će reagirati svi senzori.</string>
 	<string name="ssh">Dopušta Vam pokretanje Linux-a sa Vašeg računala na Vaš Galaxy.</string>
 	<string name="renice">Renice izmijenjuje raspored prioriteta od jednog ili više pokrenutih procesa.</string>
 	<string name="provisionned">Možete koristiti Vaš Galaxy bez SIM kartice.</string>
-	<string name="vnc">Možete upravljati s Vašim mobitelom sa Vašeg računala (koristeći specijalizirane aplikacije).</string>
-	<string name="bootani">Koristi manju animaciju pri pokretanju mobitela da smanji vrijeme pokretanja istog.</string>
-	<string name="servicemode">Samo za stručnjake! Ovdje možete primijeniti Audio Hack.</string>
+	<string name="vnc">Možete upravljati Vašim mobitelom sa Vašeg računala (koristeći specijalizirane aplikacije).</string>
+	<string name="bootani">Koristi manju animaciju pri pokretanju mobitela da smanji vrijeme pokretanje istog.</string>
+	<string name="servicemode">Samo za stručnjake! Ovdje možete primijeniti "Audio Hack".</string>
 	<string name="kitchen">Stvorite svoje vlastite Google aplikacijske pakete.</string>
 	<string name="memorythresholds">Ovo su pragovi od kojeg će uređaj prekinuti neke procese da oslobodi memoriju (ispod ovih pragova, unutarnji Prekidatelj zadataka če prekinuti ove aplikacije). Najprije učinite Nandroid kopiju!</string>
 	<string name="foregroundapp">Ovo je trenutna i pokrenuta aplikacija na ekranu. Ne mijenjajte ovu vrijednost osim ako imate mnogo znanja o tome!</string>
 	<string name="visibleapp">Ovo je otvorena i pokrenuta aplikacija u pozadini, jer još uvijek nešto radi. Ne mijenjajte ovu vrijednost osim ako imate mnogo znanja o tome!</string>
 	<string name="secondaryapp">Ovo je proces (servis koji je potreban aplikacaiji) koji je spreman u slučaju akoje potrebno uraditi nešto. Ne mijenjajte ovu vrijednost osim ako imate mnogo znanja o tome!</string>
 	<string name="hiddenapp">Ovo je ponovno proces, koji je pripravan u slučaju da je potreban od aplikacije koja je pokrenuta. Budite oprezni sa ovom postavkom!</string>
-	<string name="contentapp">Ovo su aplikacije koje pružaju podatke (informacijski sadržaj) sustavu. To su stvari kao Android Market ili Google Sync. Ako rade, one mogu osvježiti i pružati informacijski sadržaj koje moraju pružati u određenom razmaku. Ako ih prekinete, naravno to više ne mogu.</string>
-	<string name="emptyapp">Ovo nazivamo "duhovima." To su aplikacije koje ste otvorili, ali ste završili s njima. Android koristi jedinstven stil upotrebe memorijskog menadžmenta. Kada završi neka aktivnost, umjesto njenog prekidanja Android čuva aplikaciju u memoriji tako da njenom ponovnom otvaranjem jest brži proces. Ove "duhovne" aplikacije ne koriste bateriju ili procesorsko vrijeme, nego samo pune radnu memoriju koja bi inače bila prazna. Kada je ova memorija zatražena od druge aplikacije ili procesa, radna memorija se prazni i bude oslobođena za novu aplikaciju.</string>	
+	<string name="contentapp">Ovo su aplikacije koje daju podatke (informacijski sadržaj) sustavu. To su stvari kao Android Market ili Google Sync. Ako rade, one mogu osvježiti i dati podatke koje moraju pružati u određenom vremenskom razmaku. Ako ih prekinete, naravno to više ne mogu.</string>
+	<string name="emptyapp">Ovo nazivamo "duhovima." To su aplikacije koje ste otvorili, ali ste završili s njima. Android koristi jedinstven stil upravljanjem memorijom. Kada završi neka aktivnost, umjesto njenog prekidanja Android čuva aplikaciju u memoriji tako da njeno ponovno otvaranje je brže obrađeno. Ove "duhove" aplikacije ne koriste bateriju ili CPU vrijeme, nego samo pune RAM (radna memorija) koja bi inače bila prazna. Kada je ova memorija zatražena od druge aplikacije ili procesa, RAM se prazni i biva oslobođen za novu aplikaciju ili proces.</string>
+	<string name="lcddensity">Lowering the density value will then expand the screen, allowing text to appear longer and not have to scroll or wrap as soon. It also increases spacing between home screen icons, which might come in handy if someone uses Multicon Widget or ADW Launcher’s columns change to pack in more shortcuts. Make a Nandroid Backup before!</string>
 </resources>
