--- a/res/values-pl/text.xml
+++ b/res/values-pl/text.xml
@@ -11,6 +11,7 @@
     <string name="TVprovisionned">Provision</string>
     <string name="TVvnc">Serwer VNC (port 5901)</string>
     <string name="TVbootani">Użyj mniejszej animacji uruchamiania</string>
+    <string name="TVlcddensity">LCD Density</string>
     <string name="TVservicemode">Otwórz tryb serwisowy Samsunga</string>
 	<string name="TVkitchen">Otwórz GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Progi pamięci</string>
