--- a/res/values-pt/text.xml
+++ b/res/values-pt/text.xml
@@ -11,6 +11,7 @@
     <string name="TVprovisionned">Provisioned</string>
     <string name="TVvnc">Servidor VNC (porta 5901)</string>
     <string name="TVbootani">Animação de arranque mais pequena</string>
+    <string name="TVlcddensity">LCD Density</string>
     <string name="TVservicemode">Iniciar o modo de serviço da Samsung</string>
 	<string name="TVkitchen">Iniciar o GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Limiares de memória</string>
