--- a/res/values-ru/text.xml
+++ b/res/values-ru/text.xml
@@ -11,15 +11,16 @@
 	<string name="TVprovisionned">Provisionned</string>
 	<string name="TVvnc">Сервер VNC (порт 5901)</string>
 	<string name="TVbootani">Упрощённая анимация при загрузке</string>
+	<string name="TVlcddensity">LCD Density</string>
 	<string name="TVservicemode">Войти в сервисный режим Samsung</string>
 	<string name="TVkitchen">Запустить "кухню" GAOSP</string>
-	<string name="TVmemorythresholds">Memory Thresholds</string>
-	<string name="TVforegroundapp">Foreground app (MB)</string>
-	<string name="TVvisibleapp">Visible app (MB)</string>
-	<string name="TVsecondaryapp">Secondary Server (MB)</string>
-	<string name="TVhiddenapp">Hidden app (MB)</string>
-	<string name="TVcontentapp">Content provider (MB)</string>
-	<string name="TVemptyapp">Empty app (MB)</string>
+	<string name="TVmemorythresholds">Пороги памяти</string>
+	<string name="TVforegroundapp">Прил. передн. плана (MB)</string>
+	<string name="TVvisibleapp">Видимое приложение (MB)</string>
+	<string name="TVsecondaryapp">Вторичный процесс (MB)</string>
+	<string name="TVhiddenapp">Скрытый процесс(MB)</string>
+	<string name="TVcontentapp">Доставка данных (MB)</string>
+	<string name="TVemptyapp">Пустой процесс (MB)</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Экон.</string>
 	<string name="CBmix">Смеш.</string>
