--- a/res/values-nl/text.xml
+++ b/res/values-nl/text.xml
@@ -11,7 +11,7 @@
     <string name="TVprovisionned">Provisioned</string>
     <string name="TVvnc">VNC server (port 5901)</string>
     <string name="TVbootani">Gebruik kleinere opstartanimatie</string>
-    <string name="TVlcddensity">LCD Density</string>
+    <string name="TVlcddensity">LCD Dichtheid</string>
     <string name="TVservicemode">Open Samsung service modus</string>
 	<string name="TVkitchen">Open GAOSP Keuken</string>
 	<string name="TVmemorythresholds">Geheugen drempels</string>
